--- a/analysis/icml_2023_tom_workshop_figures.Rmd
+++ b/analysis/icml_2023_tom_workshop_figures.Rmd
@@ -64,7 +64,7 @@ parse_experiment_file <- function(file_name)
 ```
 
 ```{r set experiment path, include=FALSE}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/"
 dom_levels = list(
                c("0","-1"),
                c("0","1"),
@@ -95,7 +95,7 @@ for(dom_level in dom_levels)
 ```
 
 ```{r load DoM(2) vs Random game results}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/"
 
 path_to_dir <- paste(results_path, "simulation_results" ,sep="/")
 temp = list.files(path=path_to_dir, pattern="*.csv")
@@ -109,7 +109,7 @@ game_results <- rbind(game_results, cbind(interim_results, receiver_dom_level, s
 
 
 ```{r load DoM(2) vs rational subintentional game results}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/"
 
 receiver_dom_level = "2"
 sender_dom_level = "-1"
@@ -146,7 +146,7 @@ for(dom_level in dom_levels)
 ```
 
 ```{r load DoM(2) vs Random beliefs}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/beliefs/receiver_beliefs/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/beliefs/receiver_beliefs/"
 
 receiver_dom_level = "2"
 sender_dom_level = "-1"
@@ -157,7 +157,7 @@ beliefs <- rbind(beliefs, cbind(interim_results, receiver_dom_level, sender_dom_
 ```
 
 ```{r load DoM(2) rational subintentional beliefs}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/beliefs/receiver_beliefs/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/beliefs/receiver_beliefs/"
 
 receiver_dom_level = "2"
 sender_dom_level = "-1"
@@ -190,7 +190,7 @@ for(dom_level in dom_levels)
 ```
 
 ```{r load DoM(2) vs Random beliefs q values}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/q_values/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/q_values/"
 
 receiver_dom_level = "2"
 sender_dom_level = "1"
@@ -320,7 +320,8 @@ corresponding_beliefs
 ```{r how bad overmentalisation is}
 receiver_reward <- game_results %>% 
   filter(sender_dom_level == "-1",
-         sender_threshold > 0) %>% 
+         # sender_threshold > 0,
+         seed == 210) %>% 
   mutate(sender_dom_level = factor(sender_dom_level),
          sender_threshold = factor(sender_threshold),
          receiver_dom_level = factor(receiver_dom_level),
@@ -344,3 +345,67 @@ receiver_reward <- game_results %>%
 receiver_reward
 ```
 
+```{r plot games for illustration}
+sid = 210
+sender_dom_level_for_plot = -1
+receiver_dom_level_for_plot = 0
+
+game_plot <- game_results %>% 
+  filter(receiver_dom_level == receiver_dom_level_for_plot,
+         sender_dom_level == sender_dom_level_for_plot,
+         seed == sid) %>% 
+  mutate(sender_threshold = factor(sender_threshold),
+         # response = factor(response, labels = c('reject','accept'))) %>%
+         response = factor(response, labels = c('accept'))) %>%
+  mutate(sender_threshold = factor(sender_threshold)) %>% 
+  ggplot(aes(x = trial_number, y = offer)) + 
+  geom_point(aes(shape = factor(response)), size = 1.5) + 
+  geom_line(aes(colour = sender_threshold), alpha=0.5, size = 1.5) + 
+  scale_color_viridis_d(name = expression(paste('Sender threshold')))+
+  # scale_shape_manual(values=c(4, 15)) +
+  scale_shape_manual(values=c(15, 4)) +
+  scale_x_continuous(name="Trial", breaks=seq(0, 20, 1)) +
+  labs(y = 'Offer', x= 'Trial', shape = "Receiver's response") + 
+   ggtitle('Game results')
+
+belief_plot <- beliefs %>% 
+    filter(receiver_dom_level == receiver_dom_level_for_plot,
+         sender_dom_level == sender_dom_level_for_plot,
+         seed == sid) %>% 
+    mutate(`P(0.0)` = `X0.0`,
+         `P(0.1)` = `X0.1`,
+         `P(0.5)` = `X0.5`) %>% 
+  ggplot() + 
+  geom_line(aes(x = trial_number, y = `P(0.0)`, colour='`P(0.0)`',
+                linetype = factor(sender_dom_level)),
+            size=1.0) + 
+  geom_line(aes(x = trial_number, y = `P(0.1)`, colour='`P(0.1)`',
+                linetype = factor(sender_dom_level)),
+            size=1.0) + 
+  geom_line(aes(x = trial_number, y = `P(0.5)`, colour='`P(0.5)`',
+                linetype = factor(sender_dom_level)),
+            size=1.0) + 
+  scale_linetype_manual(values=c("solid", "dotted", "solid"))+
+  scale_color_viridis_d(name = expression(paste('P(',eta, ')')))+
+  facet_grid(receiver_threshold~sender_threshold) + 
+  scale_x_continuous(name="Trial", breaks=seq(0, 20, 1)) +
+  labs(y = 'Posterior probability', x= 'Trial') + 
+  ggtitle('Belief update')
+
+q_value_plot <- q_values %>% 
+    filter(receiver_dom_level == receiver_dom_level_for_plot, 
+           sender_dom_level == sender_dom_level_for_plot, seed == sid,
+           # agent == "DoM(2)_receiver") %>% 
+           agent == "DoM(0)_receiver") %>% 
+  mutate(response = factor(action, labels = c('reject','accept'))) %>% 
+    ggplot(aes(trial_number, q_value, colour = factor(sender_threshold))) + 
+  geom_point(aes(shape = response), size=2.0) + 
+  scale_shape_manual(values=c(4, 15)) + 
+  scale_color_viridis_d(name = expression(paste('P(',gamma, ')')))+
+  labs(y = 'Offer', x= 'Trial', shape = "Receiver's response") + 
+  ggtitle('DoM(0) receiver Q-values')
+  
+game_all = game_plot / belief_plot
+# ggsave(sprintf("../figures/simulation_illustration_sender_dom_level_%s_receiver_dom_level_%s.png", sender_dom_level_for_plot, receiver_dom_level_for_plot), width = 40, height = 20, units = "cm")
+game_all
+```
