--- a/analysis/main_analysis.Rmd
+++ b/analysis/main_analysis.Rmd
@@ -20,7 +20,8 @@ library(emmeans)
 library(effsize)
 library(ARTool)
 library(car)        
-library(forcats)        
+library(forcats) 
+library(RColorBrewer)
 ```
 
 ```{r Plotting settings for aliasing on windows, include=FALSE}
@@ -62,11 +63,10 @@ parse_experiment_file <- function(file_name)
 ```
 
 ```{r set experiment path, include=FALSE}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/"
+results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/2_rational_agents/short_duration/"
 dom_levels = list(
                c("0","-1"),
-               c("0","1"),
-               c("2","1"))
+               c("0","1"))
 agents_beliefs <- c("receiver_beliefs", "sender_beliefs")
 directory_pattern <- "DoM%s_receiver_DoM%s_sender_softmax_temp_0.1"
 path_to_game_results <- paste0(results_path, directory_pattern)
@@ -92,34 +92,6 @@ for(dom_level in dom_levels)
 }
 ```
 
-```{r load DoM(2) vs Random game results}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/"
-
-receiver_dom_level = "2"
-sender_dom_level = "-1"
-path_to_dir <- paste(results_path, "simulation_results" ,sep="/")
-temp = list.files(path=path_to_dir, pattern="*.csv")
-myfiles = lapply(paste(path_to_dir, temp, sep="/"), read.csv)
-interim_results <- bind_rows(myfiles)
-game_results <- rbind(game_results, cbind(interim_results, receiver_dom_level, sender_dom_level))
-
-```
-
-
-```{r load DoM(2) vs rational subintentional game results}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/"
-
-receiver_dom_level = "2"
-sender_dom_level = "-1"
-path_to_dir <- paste(results_path, "simulation_results" ,sep="/")
-temp = list.files(path=path_to_dir, pattern="*.csv")
-myfiles = lapply(paste(path_to_dir, temp, sep="/"), read.csv)
-interim_results <- bind_rows(myfiles)
-game_results <- rbind(game_results, cbind(interim_results, receiver_dom_level, sender_dom_level))
-
-```
-
-
 ```{r Load and merge beliefs, include=FALSE}
 beliefs <- c()
 for(dom_level in dom_levels)
@@ -143,27 +115,6 @@ for(dom_level in dom_levels)
 }
 ```
 
-```{r load DoM(2) vs Random beliefs}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/first_task/short_duration/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/beliefs/receiver_beliefs/"
-
-receiver_dom_level = "2"
-sender_dom_level = "-1"
-temp = list.files(path=results_path, pattern="*.csv")
-myfiles = lapply(paste(results_path, temp, sep="/"), read.csv)
-interim_results <- bind_rows(myfiles)
-beliefs <- rbind(beliefs, cbind(interim_results, receiver_dom_level, sender_dom_level))
-```
-
-```{r load DoM(2) rational subintentional beliefs}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_rational_sender/beliefs/receiver_beliefs/"
-
-receiver_dom_level = "2"
-sender_dom_level = "-1"
-temp = list.files(path=results_path, pattern="*.csv")
-myfiles = lapply(paste(results_path, temp, sep="/"), read.csv)
-interim_results <- bind_rows(myfiles)
-beliefs <- rbind(beliefs, cbind(interim_results, receiver_dom_level, sender_dom_level))
-```
 
 ```{r load and merge q_values, include=FALSE}
 q_values <- c()
@@ -187,64 +138,81 @@ for(dom_level in dom_levels)
 }
 ```
 
-```{r load DoM(2) vs Random beliefs q values}
-results_path = "~/Max_Planck/Hierarchical-modelling/data/agent_subject/basic_task/softmax/DoM2_receiver_DoM-1_sender_softmax_temp_0.1_random_sender/q_values/"
-
-receiver_dom_level = "2"
-sender_dom_level = "1"
-temp = list.files(path=results_path, pattern="*.csv")
-myfiles = lapply(paste(results_path, temp, sep="/"), read.csv)
-interim_results <- bind_rows(myfiles)
-q_values <- rbind(q_values, cbind(interim_results, receiver_dom_level, sender_dom_level))
-```
 
 # Comparing game results by DoM levels
 
-```{r cumulative reward by experiment setting}
-sender_reward <- game_results %>% 
+```{r data for cumulative reward plots}
+cumulative_reward_results <- 
+  game_results %>% 
+  mutate(sender_threshold = ifelse(sender_threshold > 0, sender_threshold, "Random")) %>% 
   mutate(sender_dom_level = factor(sender_dom_level),
          sender_threshold = factor(sender_threshold),
          receiver_dom_level = factor(receiver_dom_level),
          receiver_threshold = factor(receiver_threshold)) %>% 
-  mutate(dyad = fct_cross(sender_dom_level, receiver_dom_level)) %>% 
-  group_by(trial_number, sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold) %>% 
-  summarise(average_receiver_reward = mean(receiver_reward),
-            average_sender_reward = mean(sender_reward)) %>% 
-  arrange(sender_dom_level, receiver_dom_level, sender_threshold,
-          receiver_threshold) %>% 
-  group_by(receiver_threshold, sender_threshold, sender_dom_level, receiver_dom_level) %>% 
-  mutate(cumulative_receiver_reward = cumsum(average_receiver_reward),
-            cumulative_sender_reward = cumsum(average_sender_reward)) %>% 
-  ggplot(aes(trial_number, cumulative_sender_reward, colour = sender_threshold)) + 
-  geom_line(size = 1.0, alpha = 0.5) + 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold, seed) %>% 
+  summarise(total_receiver_reward = sum(receiver_reward),
+            total_sender_reward = sum(sender_reward)) %>% 
+  group_by(sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold) %>% 
+  summarise(total_receiver_reward = mean(total_receiver_reward),
+            total_sender_reward = mean(total_sender_reward))
+  
+```
+```{r}
+custom_colors <- list(
+  sender_tom = brewer.pal(5, "Greens")[c(1,3,5)],
+  receiver_tom = brewer.pal(5, "Blues")[c(3,5)]
+)
+```
+
+
+```{r cumulative reward by experiment setting}
+sender_reward_plot <- 
+  cumulative_reward_results %>% 
+  ggplot(aes(sender_threshold, total_sender_reward, fill = sender_threshold)) + 
+  geom_col() + 
+  facet_grid(receiver_threshold~sender_dom_level) + 
   ylab("Cumulative sender reward") + 
   xlab("Trial number") + 
-  scale_color_viridis_d(name = expression(paste('Sender threshold')))+
-  facet_grid(receiver_dom_level~sender_dom_level) 
+  scale_y_continuous(
+      expand = c(0,0),
+      name = "Sum of sender reward",
+      limits = c(0,8),
+      breaks = seq(0,8,1)
+    ) +
+  scale_fill_manual(values = brewer.pal(5, "Blues")[c(2,3,5)],
+                      name = "Sender Theta", labels = c("0.3","0.7","Random"))
 
-receiver_reward <- game_results %>% 
-  mutate(sender_dom_level = factor(sender_dom_level),
-         sender_threshold = factor(sender_threshold),
-         receiver_dom_level = factor(receiver_dom_level),
-         receiver_threshold = factor(receiver_threshold)) %>% 
-  mutate(dyad = fct_cross(sender_dom_level, receiver_dom_level)) %>% 
-  group_by(trial_number, sender_dom_level, receiver_dom_level,  receiver_threshold, sender_threshold) %>% 
-  summarise(average_receiver_reward = mean(receiver_reward),
-            average_sender_reward = mean(sender_reward)) %>% 
-  arrange(sender_dom_level, receiver_dom_level, sender_threshold,
-          receiver_threshold) %>% 
-  group_by(receiver_threshold, sender_threshold, sender_dom_level, receiver_dom_level) %>% 
-  mutate(cumulative_receiver_reward = cumsum(average_receiver_reward),
-            cumulative_sender_reward = cumsum(average_sender_reward)) %>% 
-  ggplot(aes(trial_number, cumulative_receiver_reward, colour = sender_threshold)) + 
-  geom_line(size = 1.0, alpha = 0.5) + 
+receiver_reward_plot <-
+  cumulative_reward_results %>% 
+  ggplot(aes(sender_threshold, total_receiver_reward, fill = sender_threshold)) + 
+  geom_col() + 
   ylab("Cumulative receiver reward") + 
   xlab("Trial number") + 
-  scale_color_viridis_d(name = expression(paste('Sender threshold')))+
-  facet_grid(receiver_dom_level~sender_dom_level) 
+  scale_fill_manual(values = brewer.pal(5, "Blues")[c(2,3,5)],
+                      name = "Sender Theta", labels = c("0.3","0.7","Random"))+ 
+  scale_y_continuous(
+      expand = c(0,0),
+      name = "Sum of receiver reward",
+      limits = c(0,8),
+      breaks = seq(0,8,1)
+    ) +
+  facet_grid(receiver_threshold~sender_dom_level) 
 
-cumulative_reward <- sender_reward + receiver_reward
+cumulative_reward <- sender_reward_plot + receiver_reward_plot
+cumulative_reward
 # ggsave("../figures/cumulative_reward_by_agent.png", width = 40, height = 20, units = "cm")
+```
+
+```{r}
+game_results %>% 
+  filter(sender_dom_level == -1, receiver_threshold == 0.2, sender_threshold==0.7)
+beliefs %>% 
+  filter(sender_dom_level == -1, receiver_threshold == 0.2, sender_threshold==0.7)
+```
+
+```{r}
+game_results %>% 
+  filter(sender_dom_level == 1, receiver_threshold == 0.0, sender_threshold==0.7)
 ```
 
 ## Detrimental effect of overmetaliastion
